--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,35 @@
         <item>童装</item>
         <item>美妆</item>
     </string-array>
+    <string-array name="itemName">
+        <item>我的收货地址</item>
+        <item>我的优惠券</item>
+        <item>我的钱包</item>
+        <item>我的美丽币</item>
+        <item>签到中心</item>
+        <item>我的宝贝</item>
+        <item>我的品牌</item>
+    </string-array>
+    <string-array name="itemName_02">
+        <item>我要加盟</item>
+        <item>关注官方公众号</item>
+        <item>给美丽衣橱打5分</item>
+    </string-array>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+   <string name="permission_rationale">"Contacts permissions are needed for providing email
+    completions."
+</string>
+
+
 </resources>
